# oeis_py

./: .gitignore  README.md  pyproject.toml  requirements.txt  sequence.py  shell.nix
data/a-files/: a291633.txt  a334132.txt
data/b-files/: b000945.txt  b001578.txt  (+61 more)
modules/: base.py  batch_factordb.py  checkpoint.py  config.py  ecmprobs.py  ecmtimes.py  expression.py  factor.py  factordb.py  oeis_factor_db.py  oeis_query.py  prime.py  primetest.py  semiprime.py  t_level.py  t_level_local.py  wexpr.py  yafu.py
scripts/: aliquot.py  chained_prime_finder.py  detect_special_forms.py  ecm.py  ecm_probs_data_collector.py  ecm_times_plot.py  extend_alimerge_file.py  factordbyafu.py  find_kamada_oeis_associations.py  formula_term_finder.py  generalized_lucas.py  gpu_ecm_optimizer.py  new_sequence_suggestions_from_kamada.py  oeis_factoring_worker.py  oeis_update_wiki.py  prime_expression_compressor.py  remaining_composites.py  reverse_chained_prime_finder.py  set_composite_work.py  truncated_euclid_mullin.py  update_oeis_with_kamada.py
sequences/: A000005.py  A000010.py  A000040.py  A000041.py  A000042.py  A000045.py  A000058.py  A000073.py  A000120.py  A000129.py  A000142.py  A000178.py  A000203.py  A000217.py  A000295.py  A000422.py  A000461.py  A000720.py  A000945.py  A000946.py  A001003.py  A001008.py  A001065.py  A001221.py  A001222.py  A001223.py  A001358.py  A001414.py  A001578.py  A001697.py  A002064.py  A002110.py  A003010.py  A003056.py  A003261.py  A005150.py  A005165.py  A005224.py  A005234.py  A005265.py  (+272 more)
templates/: default_sequence.vtl  default_sequnce.vtl
(+407 files in other folders)
