[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oeispy"
version = "0.1.0"
description = "A Python project for OEIS sequences"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gmpy2",
    "requests",
    "aiohttp",
    "aiohttp_retry",
    "num2words",
    "primesieve",
    "func_timeout",
    "lxml",
    "t-level>=1.0.0",
    "sympy>=1.14.0",
    "pyparsing>=3.3.1",
    "platformdirs>=4.4.0",
]

[project.scripts]
# Define CLI entry points here if needed in the future
